--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 //    implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    //room
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation 'androidx.room:room-ktx:2.3.0'
+    // optional - RxJava support for Room
+    implementation 'androidx.room:room-rxjava2:2.3.0'
     //okhttp3
     implementation("com.squareup.okhttp3:okhttp:3.12.2") {
         force = true
