--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", '""'
             manifestPlaceholders = [usesCleartextTraffic: "true"]
         }
 
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "BASE_URL", '""'
             manifestPlaceholders = [usesCleartextTraffic: "true"]
         }
     }
@@ -95,21 +93,11 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
     //rx java,kotlin and android
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-
-    //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
-    //rx with retrofit
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     //LiveData & ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-//    implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     //room
     implementation 'androidx.room:room-runtime:2.3.0'
@@ -136,15 +124,8 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     //firebase
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
-
     //progress loader
     implementation 'com.wang.avi:library:2.1.3'
-    //image zoom
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    //lock double click
-    implementation 'hk.ids.gws.android.sclick:library:1.0'
-    //view pager
-    implementation 'com.booking:rtlviewpager:1.0.1'
-
+    //jsoup
     implementation 'org.jsoup:jsoup:1.10.3'
 }
