--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,12 +85,30 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.activity:activity-ktx:1.3.0-alpha07'
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    // testing libs
+    //UI Testing , AndroidJUnitRunner and JUnit Rules &Espresso dependencies
+    //junit 5
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+
+    testImplementation 'org.junit.platform:junit-platform-runner:1.6.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'org.assertj:assertj-core:3.16.1'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    androidTestImplementation ("androidx.test.espresso:espresso-core:3.3.0",{
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    implementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+    implementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    implementation 'androidx.arch.core:core-testing:2.1.0'
 
     // retrofit2
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
