--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     androidTestImplementation 'org.assertj:assertj-core:3.16.1'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    androidTestImplementation('androidx.test.espresso:espresso-web:3.3.0')
     androidTestImplementation ("androidx.test.espresso:espresso-core:3.3.0",{
         exclude group: 'com.android.support', module: 'support-annotations'
     })
